--- a/AndBible/res/values-lt/strings.xml
+++ b/AndBible/res/values-lt/strings.xml
@@ -74,6 +74,9 @@
   <string name="prefs_text_size_title">Teksto dydis</string>
   <string name="prefs_text_size_summary">Matyk daugiau arba aiškiau</string>
   <string name="prefs_text_size_sample_text">Pavyzdys</string>
+  <string name="prefs_screen_timeout_title">Miegoti</string>
+  <string name="prefs_screen_timeout_summary">Laikas iki ekrano išsijungimo</string>
+  <string name="x_minutes">%d minutės</string>
   <string name="prefs_interface_locale_title">Programos kalba</string>
   <string name="prefs_interface_locale_summary">Pasirinkite vartotojo sąsajos kalbą</string>
   <string name="locale_change_warning">Kad pasikeistų kalba, programa bus perkrauta</string>
@@ -202,6 +205,7 @@
   <string name="retry">Bandyti dar</string>
   <string name="please_wait">Prašome palaukti...</string>
   <string name="all">Viskas</string>
+  <string name="default_value">@string/lang_default</string>
   <!--Errors-->
   <string name="error_occurred">Įvyko klaida</string>
   <string name="error_no_content">Šiai eilutei nėra teksto</string>
