--- a/AndBible/res/values-af/strings.xml
+++ b/AndBible/res/values-af/strings.xml
@@ -74,6 +74,9 @@
   <string name="prefs_text_size_title">Teks grootte</string>
   <string name="prefs_text_size_summary">Wys meer of sien meer duidelik</string>
   <string name="prefs_text_size_sample_text">Teks voorbeeld</string>
+  <string name="prefs_screen_timeout_title">Rus</string>
+  <string name="prefs_screen_timeout_summary">Rustyd voor skerm af gaan</string>
+  <string name="x_minutes">%d Minute</string>
   <string name="prefs_interface_locale_title">Applikasie taal</string>
   <string name="prefs_interface_locale_summary">Kies \'n persoonlike gebruikers taal</string>
   <string name="locale_change_warning">Applikasie sal sal stop en weer van voor af begin om oor te skakel na die nuwe taal</string>
@@ -202,6 +205,7 @@
   <string name="retry">Probeer weer</string>
   <string name="please_wait">Wag asseblief ...</string>
   <string name="all">Alles</string>
+  <string name="default_value">@string/lang_default</string>
   <!--Errors-->
   <string name="error_occurred">\'n Fout het ontstaan</string>
   <string name="error_no_content">Geen inhoud vir geselekteerde vers</string>
