--- a/AndBible/res/values-ar/strings.xml
+++ b/AndBible/res/values-ar/strings.xml
@@ -73,6 +73,9 @@
   <string name="prefs_text_size_title">حجم الجط</string>
   <string name="prefs_text_size_summary">انظر المزيد او المزيد بشكل افضل</string>
   <string name="prefs_text_size_sample_text">نموذج من الكتابة</string>
+  <string name="prefs_screen_timeout_title">وضع الثبات</string>
+  <string name="prefs_screen_timeout_summary">وقت عدم الاستخدام قبل غلق الشاشة</string>
+  <string name="x_minutes">%d دقيقة</string>
   <string name="prefs_interface_locale_title">لغة التطبيق (البرنامج)</string>
   <string name="prefs_interface_locale_summary">اختر اللغة لواجهة الاستخدام في البرنامج</string>
   <string name="locale_change_warning">سيتم اعادة فتح البرنامج لتفعيل اللغة المختارة لواجهة المستخدم</string>
@@ -164,6 +167,9 @@
   <string name="some_pages">%d صفحة</string>
   <!--Speak - Common-->
   <string name="stop">توقف</string>
+  <string name="pause">توقف</string>
+  <string name="rewind">اعادة من الاول</string>
+  <string name="forward">للامام</string>
   <string name="tts_lang_not_available">اللغة غير متاحة</string>
   <string name="speak_queue">بانتظام</string>
   <string name="speak_repeat">كرر</string>
