--- a/AndBible/res/values-de/strings.xml
+++ b/AndBible/res/values-de/strings.xml
@@ -4,9 +4,9 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"Und Gott sprach: \'\"Es werde Licht!\"\' Und es wurde Licht.\"\nGenesis 1:3</string>
   <string name="help_text">Menü-Knopf für Optionen\n\nKapitelnavigation ist mit dem Trackball, D-pad oder durch Querstreichen mit dem Finger möglich.</string>
-  <string name="help_text_long"><b>Navigation</b>\nKapitelnavigation ist mit dem Trackball, D-pad oder durch Querstreichen mit dem Finger möglich. \nAuf den unteren Bildschirmrand tippen, um eine Seite weiter zu blättern.\nDoppeltes Tippen schaltet den Vollbildmodus ein und aus.\n\n<b>Menüs</b>\nFür verschiedene Einstellungen \"Menü\" auswählen \nUm Module herunterzuladen, \"Menü-Optionen-Module herunterladen\" auswählen\n\n<b>Sprachausgabe</b>\nUm sich einen Text vorlesen zu lassen, \"Sprachausgabe\" auswählen.\n\n<b>Eigene Notizen</b>\nNotizen können über das Menü \"Eigene Notizen\" im Kontextmenü hinzugefügt werden. Die Liste der erstellten Notizen ist über das Hauptmenü abrufbar.\nNotes can be added via the My Note menu item on the verse context menu. The list of existing notes can be accessed via the main menu. \n\n\n<b>Lesezeichen</b>\nLesezeichen werden über das Vers-Kontextmenü hinzugefügt. Die angelegten Lesezeichen können über den Eintrag \"Lesezeichen\" im Hauptmenü verwaltet werden. Dort kann man über das Kontextmenü (langes Drücken) die Lesezeichen nach Gruppen ordnen.\n\n<b>Suche</b>\nDie Suche kann Platzhalter wie *, ?, AND, OR, NOT enthalten (weitere Informationen unter \"Apache Lucene - Query Parser Syntax\")\n\n<b>Kontextmenüs</b>\nFür Aktionen betreffend den aktuellen Vers lang auf den Bildschirm drücken. \nUm ein Modul zu löschen oder Informationen anzusehen, im Dokument-Auswahldialog lang auf das entsprechende Modul drücken. \nLang auf \"Zurück\" drücken, um den Verlauf anzusehen.</string>
+  <string name="help_text_long"><b>Navigation</b>\nKapitelnavigation ist mit dem Trackball, D-pad oder durch Querstreichen mit dem Finger möglich. \nAuf den unteren Bildschirmrand tippen, um eine Seite weiter zu blättern.\nDoppeltes Tippen schaltet den Vollbildmodus ein und aus.\n\n<b>Menüs</b>\nFür verschiedene Einstellungen \"Menü\" auswählen \nUm Module herunterzuladen, \"Menü-Optionen-Module herunterladen\" auswählen\n\n<b>Sprachausgabe</b>\nUm sich einen Text vorlesen zu lassen, \"Sprachausgabe\" auswählen.\n\n<b>Eigene Notizen</b>\nNotizen können über das Menü \"Eigene Notizen\" im Kontextmenü hinzugefügt werden. Die Liste der erstellten Notizen ist über das Hauptmenü abrufbar.\n\n\n<b>Lesezeichen</b>\nLesezeichen werden über das Vers-Kontextmenü hinzugefügt. Die angelegten Lesezeichen können über den Eintrag \"Lesezeichen\" im Hauptmenü verwaltet werden. Dort kann man über das Kontextmenü (langes Drücken) die Lesezeichen nach Gruppen ordnen.\n\n<b>Suche</b>\nDie Suche kann Platzhalter wie *, ?, AND, OR, NOT enthalten (weitere Informationen unter \"Apache Lucene - Query Parser Syntax\")\n\n<b>Kontextmenüs</b>\nFür Aktionen betreffend den aktuellen Vers lang auf den Bildschirm drücken. \nUm ein Modul zu löschen oder Informationen anzusehen, im Dokument-Auswahldialog lang auf das entsprechende Modul drücken. \nLang auf \"Zurück\" drücken, um den Verlauf anzusehen.</string>
   <string name="version_text">Version %s</string>
-  <string name="no_sdcard_error">Bitte legen Sie eine SD-Karte ein und starten AndBible neu.</string>
+  <string name="no_sdcard_error">Bitte legen Sie eine SD-Karte ein und starten Sie AndBible neu.</string>
   <!--main menu-->
   <string name="chooseBook">Dokument</string>
   <string name="selectPassage">Navigation</string>
@@ -74,6 +74,9 @@
   <string name="prefs_text_size_title">Zeichengröße</string>
   <string name="prefs_text_size_summary">Text größer/kleiner anzeigen</string>
   <string name="prefs_text_size_sample_text">Beispieltext</string>
+  <string name="prefs_screen_timeout_title">Ruhemodus</string>
+  <string name="prefs_screen_timeout_summary">Leerlaufzeit vor Bildschirmabschaltung</string>
+  <string name="x_minutes">%d Minuten</string>
   <string name="prefs_interface_locale_title">Sprache umschalten</string>
   <string name="prefs_interface_locale_summary">Umschalten der Sprache der Benutzerführung</string>
   <string name="locale_change_warning">AndBible wird zur Sprachumstellung neu gestartet</string>
@@ -202,9 +205,10 @@
   <string name="retry">Wiederholen</string>
   <string name="please_wait">Bitte warten...</string>
   <string name="all">Alles</string>
+  <string name="default_value">@string/lang_default</string>
   <!--Errors-->
   <string name="error_occurred">Ein Fehler ist aufgetreten!</string>
-  <string name="error_no_content">No content for selected verse</string>
+  <string name="error_no_content">Kein Inhalt für diesen Vers</string>
   <string name="error_page_too_large">Seite zu groß zum Laden</string>
   <string name="error_key_not_in_document">Nichts gefunden</string>
   <string name="empty_list">Nichts anzuzeigen</string>
