--- a/AndBible/res/values-et/strings.xml
+++ b/AndBible/res/values-et/strings.xml
@@ -74,6 +74,9 @@
   <string name="prefs_text_size_title">Teksti suurus</string>
   <string name="prefs_text_size_summary">Näe rohkem ja selgemalt</string>
   <string name="prefs_text_size_sample_text">Näidistekst</string>
+  <string name="prefs_screen_timeout_title">Uneaeg</string>
+  <string name="prefs_screen_timeout_summary">Ooteaeg enne, kui ekraan välja lülitatakse</string>
+  <string name="x_minutes">%d minutit</string>
   <string name="prefs_interface_locale_title">Rakenduse keel</string>
   <string name="prefs_interface_locale_summary">Vali rakenduse keel</string>
   <string name="locale_change_warning">Rakendus käivitatakse, et näidata uut kasutajaliidese keelt</string>
@@ -202,6 +205,7 @@
   <string name="retry">Proovi uuesti</string>
   <string name="please_wait">Palun oota...</string>
   <string name="all">Kõik</string>
+  <string name="default_value">@string/lang_default</string>
   <!--Errors-->
   <string name="error_occurred">Tekkis viga</string>
   <string name="error_no_content">Valitud salmi jaoks sisu pole</string>
