--- a/AndBible/res/values-fi/strings.xml
+++ b/AndBible/res/values-fi/strings.xml
@@ -74,6 +74,9 @@
   <string name="prefs_text_size_title">Tekstin koko</string>
   <string name="prefs_text_size_summary">Näe enemmän tai näe selvemmin</string>
   <string name="prefs_text_size_sample_text">Esimerkkiteksti</string>
+  <string name="prefs_screen_timeout_title">Lepotila</string>
+  <string name="prefs_screen_timeout_summary">Joutoaika ennen kuin näyttö sammutetaan.</string>
+  <string name="x_minutes">%d minuuttia</string>
   <string name="prefs_interface_locale_title">Sovelluksen kieli</string>
   <string name="prefs_interface_locale_summary">Valitse käyttöliittymän kieli</string>
   <string name="locale_change_warning">Sovellus pitää käynnistää uudelleen uuden käyttöliittymän kielen ottamiseksi käyttöön.</string>
@@ -202,6 +205,7 @@
   <string name="retry">Yritä uudelleen</string>
   <string name="please_wait">Odota hetki...</string>
   <string name="all">Kaikki</string>
+  <string name="default_value">@string/lang_default</string>
   <!--Errors-->
   <string name="error_occurred">Tapahtui virhe</string>
   <string name="error_no_content">Ei sisältöä valitulle jakeelle</string>
