--- a/AndBible/res/values-in/strings.xml
+++ b/AndBible/res/values-in/strings.xml
@@ -74,6 +74,9 @@
   <string name="prefs_text_size_title">Ukuran huruf</string>
   <string name="prefs_text_size_summary">Lihat lebih lanjut atau lihat lebih jelas</string>
   <string name="prefs_text_size_sample_text">Contoh teks</string>
+  <string name="prefs_screen_timeout_title">Tidur</string>
+  <string name="prefs_screen_timeout_summary">waktu sebelum layar mati</string>
+  <string name="x_minutes">%d minit</string>
   <string name="prefs_interface_locale_title">Aplikasi bahasa</string>
   <string name="prefs_interface_locale_summary">Pilih bahasa perantara pengguna </string>
   <string name="locale_change_warning">Aplikasi akan dijalankan ulang untuk beralih ke bahasa perantara</string>
@@ -202,6 +205,7 @@
   <string name="retry">Coba lagi</string>
   <string name="please_wait">Silakan tunggu ...</string>
   <string name="all">Semua</string>
+  <string name="default_value">@string/lang_default</string>
   <!--Errors-->
   <string name="error_occurred">Sebuah kesalahan telah terjadi</string>
   <string name="error_no_content">Ayat yang dipilih, tidak ada isi </string>
