--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -107,7 +107,12 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="prefs_interface_locale_title">Application language</string>
     <string name="prefs_interface_locale_summary">Select custom user interface language</string>
     <string name="locale_change_warning">Application will be restarted to switch to the new interface language</string>
-
+    <string name="prefs_split_screen_title">Split screen</string>
+    <string name="prefs_split_screen_summary">Split &amp; linking</string>
+    <string name="prefs_split_screen_single">Single screen</string>
+    <string name="prefs_split_screen_linked">Linked</string>
+    <string name="prefs_split_screen_not_linked">Not linked</string>
+    
     <!-- Notes screen -->
     <string name="no_chapter_notes">No notes exist in this chapter</string>
     <string name="no_verse_notes">No notes exist in this verse</string>
