--- a/AndBible/res/values-nn/strings.xml
+++ b/AndBible/res/values-nn/strings.xml
@@ -4,7 +4,7 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"Då sagde Gud: \'Det verte ljos!\' So vart det ljos.\"\nFyrste Mosebok 1, 3</string>
   <string name="help_text">Trykk på meny-knappen for oppgåver\n\nNaviger til neste eller førre kapittel ved å nytte rulleballen, pilknappane eller dra fingeren vannrett over skjermen</string>
-  <string name="help_text_long"><b>Navigasjon</b>\nNaviger til neste eller førre kapittel ved å nytte rulleballen, pilknappane eller dra fingeren vannrett over skjermen.\nDobbeltrykk slår av/på fullskjermmodus.\n\n<b>Meny</b> \nTrykk menyknappen for å sjå tilgjengelege val\n\nFor å laste ned fleire modular, trykk menyknappen-&gt;Meir-&gt;Last ned modular\n\n<b>Høgtlesing</b>\nTrykk menyknappen-&gt;Meir-&gt;Høgtlesing for å lytte til/stanse høgtlesing\n\n<b>Mine notat</b>\nNotat kan leggjast til versmenyen-&gt;Legg til notat. Ei liste over notat kan synast via hovudmenyen-&gt;Mine notat.\n\n<b>Bokmerke</b>\nBokmerke kan opprettast frå bibelversmenyen. Du når bokmerkehandteraren frå hovudmenyen. Bokmerkehandteraren let deg gruppere bokmerker.\n\n<b>Søk</b>\nI søkjestrengen kan du nytte særteikn som *, ?, AND, OR, NOT (sjå \"Apache Lucene - Query Parser Syntax\" for fleire detaljar).\n\n<b>Bibelversmenyen</b> \nTrykk lenge i bibelversvisning for å opne meny for gjeldande vers.\nTrykk lenge på ein modul i modulhandteraren for å slette eller vise informasjon om den.\nTrykk lenge på tilbakeknappen for å syne historikk.\n</string>
+  <string name="help_text_long"><b>Navigasjon</b>\nNaviger til neste eller førre kapittel ved å nytte rulleballen, pilknappane eller dra fingeren vannrett over skjermen.\nDobbeltrykk slår av/på fullskjermmodus.\n\n<b>Meny</b> \nTrykk menyknappen for å sjå tilgjengelege val\n\nFor å laste ned fleire modular, trykk menyknappen-&gt;Meir-&gt;Last ned modular\n\n<b>Høgtlesing</b>\nTrykk menyknappen-&gt;Meir-&gt;Høgtlesing for å lytte til/stanse høgtlesing\n\n<b>Mine notat</b>\nNotat kan leggjast til versmenyen-&gt;Legg til notat. Ei liste over notat kan synast via hovudmenyen-&gt;Mine notat.\n\n<b>Bokmerke</b>\nBokmerke kan opprettast frå bibelversmenyen. Du når bokmerkehandteraren frå hovudmenyen. Bokmerkehandteraren let deg gruppere bokmerker.\n\n<b>Søk</b>\nI søkjestrengen kan du nytte særteikn som *, ?, AND, OR, NOT (sjå \"Apache Lucene - Query Parser Syntax\" for fleire detaljar).\n\n<b>Bibelversmenyen</b> \nTrykk lenge i bibelverssyning for å opne meny for gjeldande vers.\nTrykk lenge på ein modul i modulhandteraren for å slette eller vise informasjon om den.\nTrykk lenge på tilbakeknappen for å syne historikk.\n</string>
   <string name="version_text">Versjon %s</string>
   <string name="no_sdcard_error">Vennlegst koble til eit minnekort og start And Bible opp att.</string>
   <!--main menu-->
@@ -33,7 +33,7 @@
   <string name="no_tasks_running">Ingen oppgaver kjører no.</string>
   <!--Search-->
   <string name="search_results">Søkjetreff</string>
-  <string name="search_words_group_prompt">Type søk:</string>
+  <string name="search_words_group_prompt">Søkjemetode:</string>
   <string name="search_all_words">Alle orda</string>
   <string name="search_any_word">Nokre av orda</string>
   <string name="search_phrase">Frase</string>
@@ -47,23 +47,23 @@
   <string name="error_executing_search">Feil i søkjestrengen</string>
   <!--Preferences-->
   <string name="prefs_show_verseno_title">Versnummerering</string>
-  <string name="prefs_show_verseno_summary">Vis versnummer</string>
-  <string name="prefs_verse_per_line_title">Eit vers per line</string>
-  <string name="prefs_verse_per_line_summary">Vis vers på kvar si line</string>
+  <string name="prefs_show_verseno_summary">Syn versnummer</string>
+  <string name="prefs_verse_per_line_title">Syn eitt vers per line</string>
+  <string name="prefs_verse_per_line_summary">Syn bibelvers på kvar si line</string>
   <string name="prefs_show_bookmarks_title">Syn bokmerkeikon</string>
   <string name="prefs_show_bookmarks_summary">Syn ikon i bokmerka vers</string>
-  <string name="prefs_show_mynotes_title">Vis notatikon</string>
-  <string name="prefs_show_mynotes_summary">Vis ikon i vers med notat</string>
+  <string name="prefs_show_mynotes_title">Syn notatikon</string>
+  <string name="prefs_show_mynotes_summary">Syn ikon i vers med notat</string>
   <string name="prefs_show_notes_title">Fotnotar og kryssreferansar</string>
-  <string name="prefs_show_notes_summary">Vis fotnotar og kryssreferansar</string>
-  <string name="prefs_show_strongs_title">Vis Strong sine ordnummer</string>
+  <string name="prefs_show_notes_summary">Syn fotnotar og kryssreferansar</string>
+  <string name="prefs_show_strongs_title">Syn Strong sine ordnummer</string>
   <string name="prefs_show_strongs_summary">Lenkje til greske og hebraiske definisjonar</string>
   <string name="prefs_show_morphology_title">Morfologiske kodar</string>
-  <string name="prefs_show_morphology_summary">Vis \"Robinson\'s Greek morphology\"</string>
+  <string name="prefs_show_morphology_summary">Syn \"Robinson\'s Greek morphology\"</string>
   <string name="prefs_section_title_title">Seksjonstitlar</string>
-  <string name="prefs_section_title_summary">Vis ikkje-kanoniske seksjonstitlar</string>
+  <string name="prefs_section_title_summary">Syn ikkje-kanoniske seksjonstitlar</string>
   <string name="prefs_red_letter_title">Raud skrift</string>
-  <string name="prefs_red_letter_summary">Vis Jesu tale som raud skrift</string>
+  <string name="prefs_red_letter_summary">Syn Jesu tale som raud skrift</string>
   <string name="prefs_tilt_to_scroll_title">Hell for å rulle tekst</string>
   <string name="prefs_tilt_to_scroll_summary">Hell på eininga for å rulle teksten nedover</string>
   <string name="prefs_night_mode_title">Nattmodus</string>
@@ -72,10 +72,13 @@
   <string name="prefs_navigate_to_verse_title">Naviger til vers</string>
   <string name="prefs_navigate_to_verse_summary">Vel vers (og kapittel) når du navigerer til ein bibelstad</string>
   <string name="prefs_text_size_title">Tekststorleik</string>
-  <string name="prefs_text_size_summary">Sjå meir eller klarare</string>
+  <string name="prefs_text_size_summary">Endre tekststorleiken </string>
   <string name="prefs_text_size_sample_text">Eksempeltekst</string>
-  <string name="prefs_interface_locale_title">Språk</string>
-  <string name="prefs_interface_locale_summary">Vel språk</string>
+  <string name="prefs_screen_timeout_title">Dvale</string>
+  <string name="prefs_screen_timeout_summary">Tid før skjermen slår seg av</string>
+  <string name="x_minutes">%d minuttar</string>
+  <string name="prefs_interface_locale_title">Vel språk</string>
+  <string name="prefs_interface_locale_summary">Vel språk for programvaren</string>
   <string name="locale_change_warning">Applikasjonen vil starte opp att for å endre til det nye språket</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Det finst ikkje notat til dette kapitlet</string>
@@ -202,6 +205,7 @@
   <string name="retry">Prøv om att</string>
   <string name="please_wait">Vennlegst vent...</string>
   <string name="all">Alle</string>
+  <string name="default_value">@string/lang_default</string>
   <!--Errors-->
   <string name="error_occurred">Ein feil oppstod</string>
   <string name="error_no_content">Ikkje noko innhald i verset</string>
