--- a/AndBible/res/values-lt/strings.xml
+++ b/AndBible/res/values-lt/strings.xml
@@ -80,6 +80,11 @@
   <string name="prefs_interface_locale_title">Programos kalba</string>
   <string name="prefs_interface_locale_summary">Pasirinkite vartotojo sąsajos kalbą</string>
   <string name="locale_change_warning">Kad pasikeistų kalba, programa bus perkrauta</string>
+  <string name="prefs_split_screen_title">Dalinti ekraną</string>
+  <string name="prefs_split_screen_summary">Dalinimas &amp; susiejimas</string>
+  <string name="prefs_split_screen_single">Vienas ekranas</string>
+  <string name="prefs_split_screen_linked">Susieta</string>
+  <string name="prefs_split_screen_not_linked">Nesusieta</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Šiame skyriuje nėra pastabų</string>
   <string name="no_verse_notes">Šioje eilutėje nėra pastabų</string>
