--- a/AndBible/res/values-lv/strings.xml
+++ b/AndBible/res/values-lv/strings.xml
@@ -74,9 +74,17 @@
   <string name="prefs_text_size_title">Teksta izmērs</string>
   <string name="prefs_text_size_summary">Skatīt vairāk vai redzēt skaidrāk</string>
   <string name="prefs_text_size_sample_text">Parauga teksts</string>
+  <string name="prefs_screen_timeout_title">Iemidzināt</string>
+  <string name="prefs_screen_timeout_summary">gaidīšanas laiks pirms ekrāna atslēgšanas</string>
+  <string name="x_minutes">%d minūtes</string>
   <string name="prefs_interface_locale_title">Programmas valoda</string>
   <string name="prefs_interface_locale_summary">Izvēlieties pielāgotu lietotāja interfeisa valodu</string>
   <string name="locale_change_warning">Programma tiks pārstartēta, lai pārslēgtos uz jauno interfeisa valodu</string>
+  <string name="prefs_split_screen_title">Sadalīt ekrānu</string>
+  <string name="prefs_split_screen_summary">Sadalīt ekrānu &amp; saistīti</string>
+  <string name="prefs_split_screen_single">Viens ekrāns</string>
+  <string name="prefs_split_screen_linked">Saistīts</string>
+  <string name="prefs_split_screen_not_linked">Nav saistīts</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Šajā nodaļā nav piezīmju</string>
   <string name="no_verse_notes">Šajā pantā nav piezīmju</string>
