--- a/AndBible/res/values-fi/strings.xml
+++ b/AndBible/res/values-fi/strings.xml
@@ -80,6 +80,11 @@
   <string name="prefs_interface_locale_title">Sovelluksen kieli</string>
   <string name="prefs_interface_locale_summary">Valitse käyttöliittymän kieli</string>
   <string name="locale_change_warning">Sovellus pitää käynnistää uudelleen uuden käyttöliittymän kielen ottamiseksi käyttöön.</string>
+  <string name="prefs_split_screen_title">Jaettu ruutu</string>
+  <string name="prefs_split_screen_summary">Jakaminen &amp; linkitys</string>
+  <string name="prefs_split_screen_single">Yhdessä näytössä</string>
+  <string name="prefs_split_screen_linked">Linkitetty</string>
+  <string name="prefs_split_screen_not_linked">Ei linkitystä</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Tähän lukuun ei liity alaviitteitä</string>
   <string name="no_verse_notes">Tähän jakeeseen ei liity alaviitteitä</string>
