--- a/AndBible/res/values-lv/strings.xml
+++ b/AndBible/res/values-lv/strings.xml
@@ -210,6 +210,7 @@
   <string name="retry">Mēģināt vēlreiz</string>
   <string name="please_wait">Lūdzu, uzgaidiet ...</string>
   <string name="all">Viss</string>
+  <string name="default_value">@string/lang_default</string>
   <!--Errors-->
   <string name="error_occurred">Kļūda</string>
   <string name="error_no_content">Izvēlētajam pantam nav papildus satura</string>
