--- a/AndBible/res/values-nb/strings.xml
+++ b/AndBible/res/values-nb/strings.xml
@@ -80,6 +80,11 @@
   <string name="prefs_interface_locale_title">Språk</string>
   <string name="prefs_interface_locale_summary">Velg ønsket språk for brukergrensesnittet</string>
   <string name="locale_change_warning">Applikasjonen vil omstarte for at det nye språket skal tre i kraft</string>
+  <string name="prefs_split_screen_title">Delt skjerm</string>
+  <string name="prefs_split_screen_summary">Skjermdeling og synkronisering</string>
+  <string name="prefs_split_screen_single">Enkeltskjerm</string>
+  <string name="prefs_split_screen_linked">Delt og synkronisert</string>
+  <string name="prefs_split_screen_not_linked">Delt og ikke-synkronisert</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Ingen notater eksisterer for dette kapittelet.</string>
   <string name="no_verse_notes">Ingen notat til dette verset</string>
