--- a/AndBible/res/values-cs/strings.xml
+++ b/AndBible/res/values-cs/strings.xml
@@ -2,7 +2,7 @@
 <resources>
   <string name="app_name">And Bible</string>
   <!--Startup & Help-->
-  <string name="splash_top_text">\n\\"I řekl Bůh: Budiž světlo! A bylo světlo.\\"\nGenesis 1:3</string>
+  <string name="splash_top_text">\n\"I řekl Bůh: Budiž světlo! A bylo světlo.\"\nGenesis 1:3</string>
   <string name="help_text">Akce lze vyvolávat z klávesy MENU\n\nNa další nebo předchozí kapitolu lze přejít track-ballem, D-padem nebo posuvem prstu doleva nebo doprava</string>
   <string name="help_text_long"><b>Navigace</b>\nNa další nebo předchozí kapitolu lze přejít track-ballem, D-padem nebo posuvem prstu dolevo nebo doprava.\nDvojdotykem lze zapnout/vypnout režimm celé obrazovky.\n\n<b>Menu</b>\nAkce lze vyvolávat z klávesou MENU \n\nVíce dokumentů je možno stáhnou stisknutím Menu/Více/Stáhnout dokumenty \n\n<b>Mluvení</b>\nStisknutím Mluvení se přistupuje k dialogu pro zapnutí nebo vypnutí čtení\n\n<b>Poznámky</b>\nPoznámky lze přidat z kontextového menu verše. Správce poznámek je přístupný z hlavního menu. Kontextové menu správce poznámek umožňuje třídění poznámek. Ke skupinán se přiřazují popisky.\n\n<b>Záložky</b>\nZáložky lze přidat z kontextového menu verše. Správce záložek je přístupný z hlavního menu. Kontextové menu správce záložek umožňuje třídění záložek do skupin. Ke skupinám se přiřazují popisky.\n\n<b>Hledání</b>\nText pro vyhledávání může zahrnovat speciální znaky jako *, ?, AND, OR, NOT (podrobnosti viz \\"Apache Lucene - Query Parser Syntax\\")\n\n<b>Kontextová menu</b>\nDlouhý stisk v náhledu Bible vyvolá kontextové menu s akcemi, ovlivňující současný verš. \nDlouhým stiskem v okně pro výběr dokumentu lze dokument odstranit nebo o něm zobrazit informace.\nDlouhým stiskem tlačítka Zpět je možno přistupovat k seznamu s historií.</string>
   <string name="version_text">Verze %s</string>
@@ -80,6 +80,11 @@
   <string name="prefs_interface_locale_title">Jazyk aplikace</string>
   <string name="prefs_interface_locale_summary">Vybrat jiný jazyk uživatelského rozhraní</string>
   <string name="locale_change_warning">Aplikace bude restartována, aby došlo ke změně jazyka</string>
+  <string name="prefs_split_screen_title">Rozdělení obrazovky</string>
+  <string name="prefs_split_screen_summary">Rozdělení a propojení</string>
+  <string name="prefs_split_screen_single">Jedna obrazovka</string>
+  <string name="prefs_split_screen_linked">Propojené</string>
+  <string name="prefs_split_screen_not_linked">Nepropojené</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Kapitola neobsahuje poznámky</string>
   <string name="no_verse_notes">Verš neobsahuje poznámky</string>
