--- a/AndBible/res/values-zh-rTW/strings.xml
+++ b/AndBible/res/values-zh-rTW/strings.xml
@@ -80,6 +80,7 @@
   <string name="prefs_interface_locale_title">程式用戶界面語言</string>
   <string name="prefs_interface_locale_summary">選擇用戶界面語言</string>
   <string name="locale_change_warning">應用程序將重新啟動切換到新的界面語言</string>
+  <string name="prefs_split_screen_not_linked">解除鏈接</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">本章沒有備注</string>
   <string name="no_verse_notes">本節沒有備注</string>
