--- a/AndBible/res/values-ru/strings.xml
+++ b/AndBible/res/values-ru/strings.xml
@@ -74,9 +74,17 @@
   <string name="prefs_text_size_title">Размер текста</string>
   <string name="prefs_text_size_summary">Отображать текст крупными буквами</string>
   <string name="prefs_text_size_sample_text">Образец текста</string>
+  <string name="prefs_screen_timeout_title">Спящий режим</string>
+  <string name="prefs_screen_timeout_summary">Время ожидания перед выключением экрана</string>
+  <string name="x_minutes">%d минут</string>
   <string name="prefs_interface_locale_title">Язык</string>
   <string name="prefs_interface_locale_summary">Выбрать язык интерфейса</string>
   <string name="locale_change_warning">Приложение перезагрузится для перехода интерфейса на новый язык.</string>
+  <string name="prefs_split_screen_title">Разделить экран</string>
+  <string name="prefs_split_screen_summary">Подождите минуточку...</string>
+  <string name="prefs_split_screen_single">Единый экран</string>
+  <string name="prefs_split_screen_linked">Соединенный</string>
+  <string name="prefs_split_screen_not_linked">Не соединенный</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">В этой главе нет заметок.</string>
   <string name="no_verse_notes">В этом стихе нет заметок.</string>
@@ -202,6 +210,7 @@
   <string name="retry">Попытайтесь снова</string>
   <string name="please_wait">Пожалуйста подождите...</string>
   <string name="all">Все</string>
+  <string name="default_value">Язык по умолчанию</string>
   <!--Errors-->
   <string name="error_occurred">Произошла ошибка</string>
   <string name="error_no_content">В выбранных стихах нет содержания</string>
