Add versification to About screen

--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -230,6 +230,10 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="restore">Restore</string>
     <string name="restore_confirmation">Overwrite My Notes and Bookmarks?</string>    
     <string name="restore_success">My Notes and Bookmarks restored from %s on the SD card</string>    
+
+    <!-- About -->
+    <string name="about_version">Version: %s</string>
+    <string name="about_versification">Versification: %s</string>
     
     <!-- Document types -->
     <string name="doc_type_bible">Bible</string>
